--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <p>This is our example repo</p>
+
+
+<p>Paagraph 1</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, asperiores.</p>
